apps/schedula/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedula
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedula
  template:
    metadata:
      labels:
        app: schedula
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: veirt.dev/node-pool
                    operator: In
                    values:
                      - vps
      tolerations:
        - key: "veirt.dev/node-pool"
          operator: "Equal"
          value: "vps"
          effect: "NoSchedule"
      containers:
        - name: schedula
          image: ghcr.io/veirt/schedula@sha256:2462548b4ad15ad87183886d798fdebb6b817ee8417266056e4e814747add7d4
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: data-volume
              mountPath: /app/db
              subPath: schedula
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
