apps/schedula/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: schedula-service
spec:
  selector:
    app: schedula
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
