apps/schedula/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schedula-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: schedula.solveir.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schedula-service
                port:
                  number: 3000
  tls:
    - hosts:
        - schedula.solveir.icu
      secretName: schedula-tls
